<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/green01"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="25"
            android:text="@string/test_text"
            android:textColor="@android:color/white"
            android:textSize="@dimen/League"
            android:contentDescription="@string/league_name"
            android:id="@+id/league_textview"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_weight="40"
            android:text="@string/test_text"
            android:textSize="@dimen/League"
            android:textColor="@android:color/white"
            android:contentDescription="@string/league_matchday"
            android:id="@+id/matchday_textview"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="35"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/share_text"
            android:textSize="@dimen/League"
            android:id="@+id/share_button"
            android:drawableRight="@drawable/abc_ic_menu_share_mtrl_alpha"
            android:contentDescription="@string/share_button"

            />

    </LinearLayout>



</LinearLayout>