<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:background="@drawable/list_item"
    android:layoutDirection="locale"
    >
    <LinearLayout
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="100"
        android:layoutDirection="locale"
        >
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:background="@color/green01"
            android:id="@+id/home_crest_box"
            android:padding="@dimen/full_padding"
            android:layoutDirection="locale"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:contentDescription="@string/home_crest"
                android:id="@+id/home_crest"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/TeamNames"
                android:gravity="center"
                android:text="@string/test_text"
                android:contentDescription="@string/home_team_name"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:textColor="@color/white"
                android:id="@+id/home_name"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:orientation="vertical"
            android:background="@color/green01"
            android:id="@+id/away_crest_box"
            android:layoutDirection="locale"
            android:padding="@dimen/full_padding"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:contentDescription="@string/away_crest"
                android:id="@+id/away_crest"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/test_text"
                android:textSize="@dimen/TeamNames"
                android:contentDescription="@string/away_team_name"
                android:textColor="@color/white"
                android:layoutDirection="locale"
                android:textDirection="locale"
                android:id="@+id/away_name"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green10"
        android:paddingTop="@dimen/half_padding"
        android:paddingBottom="@dimen/half_padding"
        android:orientation="vertical"
        android:layoutDirection="locale"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/Score"
            android:contentDescription="@string/match_score"
            android:textColor="@color/white"
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:id="@+id/score_textview"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/test_text"
            android:layout_gravity="center"
            android:gravity="center"
            android:contentDescription="@string/match_time"
            android:layoutDirection="locale"
            android:textDirection="locale"
            android:textColor="@color/white"
            android:id="@+id/data_textview"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
        android:id="@+id/details_fragment_container">
    </FrameLayout>
</LinearLayout>


