<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="top|left"
    android:padding="0dp"
    android:layout_margin="0dp"

    >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/grass_texture_1024"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:alpha="0.9"
        android:id="@+id/widget_background"
        android:contentDescription="@string/widget_background"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="100"
        >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentLeft="true"
        android:weightSum="10"
        android:layout_weight="35"
        >

        <TextView
            android:id="@+id/host_score"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="@dimen/TeamNames"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingTop="@dimen/widget_half_padding"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_weight="4"
            android:contentDescription="@string/home_score"
            />

        <TextView
            android:id="@+id/host_team"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:textSize="@dimen/abc_text_size_small_material"
            android:textStyle="bold"
            android:textColor="@color/white"

            android:padding="@dimen/full_padding"

            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:contentDescription="@string/home_team"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="30"
        >

        <TextView
            android:id="@+id/match_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/TeamNames"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal|center_vertical"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_weight="6"
            android:contentDescription="@string/match_time"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_alignParentRight="true"
        android:weightSum="10"
        android:layout_weight="35"
        >


        <TextView
            android:id="@+id/guest_score"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="@dimen/TeamNames"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:paddingTop="@dimen/widget_half_padding"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:layout_weight="4"
            android:contentDescription="@string/away_score"
            />


        <TextView
            android:id="@+id/guest_team"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"

            android:textSize="@dimen/abc_text_size_small_material"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="@dimen/full_padding"

            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:contentDescription="@string/away_team"
            />


    </LinearLayout>

    </LinearLayout>


</RelativeLayout>